force-app/main/default/objects/Approver_Profile_Escalation__mdt/Approver_Profile_Escalation__mdt.object-meta.xml
<CustomObject>
    <description>&lt;Approval Escalation/Recall Batch&gt; Profile maping escalate to Manager or Sales mangement</description>
    <label>Approver Profile Escalation</label>
    <pluralLabel>Approver Profile Escalations</pluralLabel>
</CustomObject>