force-app/main/default/objects/Approver_Profile_Escalation__mdt/fields/Escalate_to__c.field-meta.xml
<CustomField>
    <fullName>Escalate_to__c</fullName>
    <inlineHelpText>Profile to be Reassigned(Escalated to)</inlineHelpText>
    <label>Escalate to</label>
    <length>50</length>
    <type>Text</type>
</CustomField>