force-app/main/default/objects/Approver_Profile_Escalation__mdt/fields/Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Profile_Name__c</fullName>
    <inlineHelpText>Current Profile</inlineHelpText>
    <label>Profile Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>