force-app/main/default/objects/Approver_Profile_Escalation__mdt/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <inlineHelpText>Incase that need to escalate to Sales Management, Prefer Segment to be able to assign Sales Management.</inlineHelpText>
    <label>Segment</label>
    <length>10</length>
    <type>Text</type>
</CustomField>